--- a/docs/01.语言/01.Go/12.sync.Pool.md
+++ b/docs/01.语言/01.Go/12.sync.Pool.md
@@ -104,9 +104,10 @@ type dequeueNil *struct{}
   * tail 队列中最老数据的索引，永远在前面；
   * head 将要填充的下一个槽的索引，永远在后面；
   * 槽的范围是 [tail, head) ；
+  * tail 和 head 像是一个双指针一样，同时往后移动，它们之间的距离永远在 0 和 len(vals) 之间；
   * 队列为空时，head == tail；队列满了时，tail + len(vals) == head，dequeueLimit 保证其不会越界；
-  * head，tail 不会在超过队列长度时被赋值为其求余后的值，而是在要需要通过其取值时，用其对len(vals)求余后的余值作为索引；
-* `vals` 是一个存储 `interface{}` 的切片，它的长度必须是 2 的幂，与索引 head、tail 一起形成一个环形队列；
+  * head，tail 不会在超过队列长度时被赋值为其求余后的值，而是在要需要通过其取值时，用其对 len(vals) 求余后的余值作为索引，然后取数组对应位置的数据； 
+* `vals` 是一个存储 `interface{}` 的数组，它的长度必须是 2 的幂，与索引 head、tail 一起形成一个环形队列；
 * `eface` 为切片实际存储的元素，包含了指向元素类型和元素值的两个指针；
 * `dequeueLimit` 表示切片的最大长度，这样能够保证 head、tail 不会超过机器的限制；
 * `dequeueNil` 表示 `eface` 切片的一个空值，以与整个 `eface` 切片为空时的 `nil` 区分开；
@@ -136,7 +137,6 @@ func (d *poolDequeue) pack(head, tail uint32) uint64 {
 ##### (4) poolDequeue.pushHead
 ::: details
 ```go
-// pushHead 在队列头部添加 val，如果队列已满，则返回false，必须被单生产者调用
 func (d *poolDequeue) pushHead(val interface{}) bool {
 	ptrs := atomic.LoadUint64(&d.headTail)
 	head, tail := d.unpack(ptrs)
@@ -161,17 +161,20 @@ func (d *poolDequeue) pushHead(val interface{}) bool {
 	*(*interface{})(unsafe.Pointer(slot)) = val
 
 	// 增加 head，这会将插槽的所有权传递给 popTail，并充当写入插槽的存储屏障。
+	// 因为可能会与 popTail 有竞争，所以此处需要原子操作
 	atomic.AddUint64(&d.headTail, 1<<dequeueBits)
 	return true
 }
 ```
 :::
-
+* pushHead 在队列头部添加 val，如果队列已满，则返回false，必须被单生产者调用；
+* 在 push 时，需要判断队列是否满了，队列为满的判断尾部索引 tail 落后头部索引 head 一整个队列的长度，head 是指向下一个要写入的位置；
+* 当 push 的元素为空时，需要设为 dequeueNil，以区分是整个插槽为 nil 还是插槽中的元素为 nil；
+* 最后需要以原子操作的方式修改 headTail，因为可能会和 popTail 的其他 goroutine 有竞争；
 ##### (5) poolDequeue.popHead
 ::: details
 ```go
-// popHead 移除并返回队列首部的元素
-// 如果队列为空，则返回 false，必须由但生产者调用
+// popHead 移除并返回队列首部的元素，如果队列为空，则返回 false，必须由但生产者调用
 func (d *poolDequeue) popHead() (interface{}, bool) {
 	var slot *eface
 	for {
