--- a/docs/01.语言/01.Go/12.sync.Pool.md
+++ b/docs/01.语言/01.Go/12.sync.Pool.md
@@ -79,7 +79,7 @@ func main() {
 ## 四、源码解读
 ### （一）双端链表
 #### 1，poolDequeue
-##### (1) poolDequeue
+##### (1) poolDequeue 结构
 ::: details
 ```go
 type poolDequeue struct {
@@ -174,7 +174,6 @@ func (d *poolDequeue) pushHead(val interface{}) bool {
 ##### (5) poolDequeue.popHead
 ::: details
 ```go
-// popHead 移除并返回队列首部的元素，如果队列为空，则返回 false，必须由但生产者调用
 func (d *poolDequeue) popHead() (interface{}, bool) {
 	var slot *eface
 	for {
@@ -206,11 +205,13 @@ func (d *poolDequeue) popHead() (interface{}, bool) {
 }
 ```
 :::
-##### (6) poolDequeue.popTail
+* popHead 移除并返回队列首部的元素，如果队列为空，则返回 false，必须由但生产者调用；
+* 需要判断队列是否为空，即 tail 和 head 是否相等；
+* 取出元素后，需要将插槽归零，避免在 pushHead 时发现不为 nil，无法插入；
+* 同一个时刻只会有单个生产者将该插槽归零，不存在竞争，所以无需原子操作；
+ ##### (6) poolDequeue.popTail
 ::: details
 ```go
-// popTail 移除并返回队列尾部的元素
-// 如果队列为空，则返回 false，可以被任意数量的消费者调用
 func (d *poolDequeue) popTail() (interface{}, bool) {
 	var slot *eface
 	for {
@@ -240,44 +241,144 @@ func (d *poolDequeue) popTail() (interface{}, bool) {
 	// 我们首先写入 val，然后通过原子写入 typ 来发布我们已经完成了这个插槽。
 	slot.val = nil
 	atomic.StorePointer(&slot.typ, nil)
-	// At this point pushHead owns the slot.
 
 	return val, true
 }
 ```
 :::
+* popTail 移除并返回队列尾部的元素，如果队列为空，则返回 false，可以被任意数量的消费者调用； 
+* 需要判断队列是否为空，即 tail 和 head 是否相等；
+* 取出元素后，需要将插槽归零，避免在 pushHead 时发现不为 nil，无法插入；
+* 同一个时刻可能会有多个消费者将该插槽归零，存在竞争，所以需要原子操作；
+
 #### 2，poolChainElt
 ::: details
 ```go
-// poolChainElt 是一个双向链表，只是链表的每个元素都是一个环形队列 poolDequeue，每个 poolDequeue 队列的长度都是 2 幂，并且是前一个队列长度的两倍
 type poolChainElt struct {
 	poolDequeue
 
 	// next、prev 链接到 poolChain 相邻的 poolChainElts
-	// next 指向的方向为 head，由生产者以原子方式编写，由消费者以原子方式读取。它只从 nil 过渡到非 nil。
-	// prev 指向的方向为 nil，由消费者以原子方式编写，由生产者以原子方式读取。它只从非 nil 过渡到 nil。
-	// 当前 P 上的 G 对于该 P 上的 poolDequeue 是生产者，从 next 上写和读，对于其他 P 上的 poolDequeue 是消费者，只能从 prev 读，不能写；
 	next, prev *poolChainElt
 }
 ```
 :::
+* poolChainElt 是一个双向链表的节点，该节点包含一个环形队列 poolDequeue 的元素，以及指向前后节点的指针，每个 poolDequeue 队列的长度都是 2 幂，并且是前一个节点中队列长度的两倍，结合上图可知该结构；
+* next 指向的方向为 poolChain 中的 head，prev 指向的方向为 poolChain 中的 tail；
+* 当前 P 上的 G 对于该 P 上的 poolDequeue 是生产者，从 next 上写和读，对于其他 P 上的 poolDequeue 是消费者，只能从 prev 读，不能写；
 
 #### 3，poolChain
+##### (1) poolChain 结构
 ::: details
 ```go
-// poolChain 是 poolDequeue 动态长度的版本
-// 这是作为 poolDequeues 的双向链表队列实现的，其中每个队列的大小是前一个队列的两倍。
-// 一旦排队填满，就会分配一个新的，并且只会推送到最新的排队。
-// 弹出发生在列表的另一端，一旦排队用尽，它就会从列表中删除。
 type poolChain struct {
-	// head 是要从头部推入的 poolDequeue。这只能由生产者访问，因此不需要同步。所以 head 指向的是最新创建的队列，也是最大的队列。
 	head *poolChainElt
-	// tail 是要从尾部弹出的 poolDequeue。它由消费者访问，因此读取和写入必须是原子的。tail 指向的是最早创建的队列，也就是最小的队列。
 	tail *poolChainElt
-
-	// P1 作为生产者从 P1 的头部开始读，其他 P 作为消费者，从 P1 的尾部开始读，他们与 P1 之间不会产生竞争，但是他们之间会有竞争
-	// 故头部读不用原子操作，尾部读需要用原子操作
 }
 ```
 :::
+* poolChain 是一个动态长度的链表，其节点是 poolChainElt，其中 head 元素指向链表的最新节点，tail 元素指向链表的最老节点；
+* head 指向的是最新创建的节点，也是最大的队列，从头部读写元素时，即是从 head 指向的 poolChainElt 节点中的 poolDequeue 队列的头部进行读写，这只能由生产者访问，不需要同步；
+* tail 指向的是最早创建的节点，也是最小的队列，从尾部读元素时，即是从 tail 指向的 poolChainElt 节点中的 poolDequeue 队列的进行读，这可以由多个消费者访问，需要进行同步；
+* 当从头部写元素时，当 head 指向的 poolChainElt 节点中的 poolDequeue 环形队列中满了时，会重新创建一个新的节点，该节点中的环形队列的长度是当前 head 中环形队列长度的两倍，并将该节点加入到链表中，更新 head 指向该最新节点，继续往该节点写入；
+* 当从尾部读元素时，当 tail 指向的 poolChainElt 节点中的 poolDequeue 环形队列中空了时，会从该链表中删除该节点，并更新 tail 指向其下一个节点；
+##### (2) poolChain.pushHead
+:::details
+```go
+// 以原子的方式进行存储
+func storePoolChainElt(pp **poolChainElt, v *poolChainElt) {
+	atomic.StorePointer((*unsafe.Pointer)(unsafe.Pointer(pp)), unsafe.Pointer(v))
+}
+// 以原子的方式进行加载
+func loadPoolChainElt(pp **poolChainElt) *poolChainElt {
+	return (*poolChainElt)(atomic.LoadPointer((*unsafe.Pointer)(unsafe.Pointer(pp))))
+}
+func (c *poolChain) pushHead(val interface{}) {
+	d := c.head
+	if d == nil {
+		// 初始化 chain.
+		const initSize = 8 // 必须为 2 的幂
+		d = new(poolChainElt)
+		d.vals = make([]eface, initSize)
+		c.head = d
+		storePoolChainElt(&c.tail, d) // tail 的写入必须是原子方式的
+	}
+
+	if d.pushHead(val) {
+		return
+	}
+
+	// 当前队列已满，新分配的队列长度是当前的两倍
+	newSize := len(d.vals) * 2
+	if newSize >= dequeueLimit {
+		newSize = dequeueLimit
+	}
+
+	d2 := &poolChainElt{prev: d}     // 新创建的 poolChainElt 的前一个指向当前的 poolChainElt
+	d2.vals = make([]eface, newSize) // 新创建的 poolChainElt 尺寸翻倍
+	c.head = d2                      // head 指向新创建的 poolChainElt
+	storePoolChainElt(&d.next, d2)   // 当前的 poolChainElt 的下一个指向新创建的 poolChainElt
+	d2.pushHead(val)                 // 将 val 插入新创建的 poolChainElt 的头部
+}
+```
+:::
+* 从链表的头部写入元素，如果链表头部为空，则说明整个链表为空，则直接创建一个 poolChainElt 节点，其环形队列的长度为 8，即初始环形队列的长度为 8，并将链表的头部和尾部同时指向该节点，可能会有多个消费者同时修改 tail，所以尾部的写入必须是原子的；
+* 如果链表的头部不为空，则直接写入头部节点的环形队列，写入失败则说明该头部的的环形队列已满，需要重新创建环形队列是当前两倍大小的新节点，更新头部节点并写入数据；
+##### (3) poolChain.popHead
+:::details
+```go
+func (c *poolChain) popHead() (interface{}, bool) {
+	d := c.head
+	for d != nil {
+		if val, ok := d.popHead(); ok {
+			return val, ok
+		}
+		// 从 head 往 tail 的过程中加载 poolChainElt 节点，虽然只有一个生产者，但是可能会与其他消费者从 tail 往 head 的过程中加载到同一个节点，所以此处需要原子操作 
+		d = loadPoolChainElt(&d.prev)
+	}
+	return nil, false
+}
+```
+:::
+* 从链表的头部读取元素，尝试从 head 指向的节点的环形队列中开始读取元素，如果没有，则继续从前一个节点读取，即上图中 prev 指向的节点，直到读取到元素立即返回，当达到最后一个节点的 prev 时跳出循环，返回 nil，false；
+* 从 head 往 tail 的过程中加载 poolChainElt 节点，虽然只有一个生产者，但是可能会与其他消费者从 tail 往 head 的过程中加载到同一个节点，所以此处需要原子操作；
+* 在整个读取过程中，即使某个节点的环形队列为空，该节点也不会被删除；
+##### (4) poolChain.popTail
+:::details
+```go
+// tail 侧的空队列会被删除
+func (c *poolChain) popTail() (interface{}, bool) {
+	d := loadPoolChainElt(&c.tail)
+	if d == nil {
+		return nil, false
+	}
+
+	for {
+		// 从 tail 往 head 的过程中加载 poolChainElt 节点，可能会有多个消费者或某个生产者同时加载到同一个节点，所以此处需要原子操作
+		d2 := loadPoolChainElt(&d.next)
+
+		if val, ok := d.popTail(); ok {
+			return val, ok
+		}
+
+		if d2 == nil {
+			// 这是唯一的队列。它现在是空的，但将来可能会被推入数据。
+			return nil, false
+		}
+
+		// 不同 P 读同一个 P 的尾部时，会有竞争，故用原子操作
+		// 链条的尾部已弹空，尝试将 tail 指向当前队列的 next 队列，以从链表中删除当前队列，这样下一次弹出时就不必再次查看空队列
+		if atomic.CompareAndSwapPointer((*unsafe.Pointer)(unsafe.Pointer(&c.tail)), unsafe.Pointer(d), unsafe.Pointer(d2)) {
+			// CAS 成功，清除 prev 指针，当前队列的 next 队列的 pre 是指向当前队列的，此时需要置为 nil，以便垃圾回收期可以回收当前这个空队列
+			// 逐步删除短的队列，可以保证所有的元素都在一个或多个连续的队列中，而队列的长度和元素的长度是相近的，可以避免内存浪费
+			storePoolChainElt(&d2.prev, nil)
+		}
+		d = d2
+	}
+}
+```
+:::
+* 从链表的头部读取元素，尝试从 tail 指向的节点的环形队列中开始读取元素，如果 tail 为空，则说明整个链表为空，直接返回；
+* 提前获取 tail 的下一个节点，从当前节点读取数据，能读到则直接返回，读不到但下一个节点为空则整个链表也读不到直接返回，读不到但下一个节点不为空，则删除当前节点，并从下一个节点继续开始读取数据，直到 head 节点的 next 节点；
+* 从 tail 往 head 的过程中加载 poolChainElt 节点，可能会有多个消费者或某个生产者同时加载到同一个节点，所以此处需要原子操作；
+
 ### 2，缓存池
