--- a/docs/01.语言/01.Go/12.sync.Pool.md
+++ b/docs/01.语言/01.Go/12.sync.Pool.md
@@ -111,7 +111,7 @@ type dequeueNil *struct{}
 * `eface` 为切片实际存储的元素，包含了指向元素类型和元素值的两个指针；
 * `dequeueLimit` 表示切片的最大长度，这样能够保证 head、tail 不会超过机器的限制；
 * `dequeueNil` 表示 `eface` 切片的一个空值，以与整个 `eface` 切片为空时的 `nil` 区分开；
-##### (2) poolDequeue.unpack
+##### (2) unpack
 ::: details
 ```go
 func (d *poolDequeue) unpack(ptrs uint64) (head, tail uint32) {
@@ -123,7 +123,7 @@ func (d *poolDequeue) unpack(ptrs uint64) (head, tail uint32) {
 ```
 :::
 * 从 64 位 ptrs 中解出 32 位 head, tail 值；
-##### (3) poolDequeue.pack
+##### (3) pack
 ::: details
 ```go
 func (d *poolDequeue) pack(head, tail uint32) uint64 {
@@ -134,7 +134,7 @@ func (d *poolDequeue) pack(head, tail uint32) uint64 {
 ```
 :::
 * 将 32 位 head, tail 值打包为 64 位值；
-##### (4) poolDequeue.pushHead
+##### (4) pushHead
 ::: details
 ```go
 func (d *poolDequeue) pushHead(val interface{}) bool {
@@ -171,7 +171,7 @@ func (d *poolDequeue) pushHead(val interface{}) bool {
 * 在 push 时，需要判断队列是否满了，队列为满的判断尾部索引 tail 落后头部索引 head 一整个队列的长度，head 是指向下一个要写入的位置；
 * 当 push 的元素为空时，需要设为 dequeueNil，以区分是整个插槽为 nil 还是插槽中的元素为 nil；
 * 最后需要以原子操作的方式修改 headTail，因为可能会和 popTail 的其他 goroutine 有竞争；
-##### (5) poolDequeue.popHead
+##### (5) popHead
 ::: details
 ```go
 func (d *poolDequeue) popHead() (interface{}, bool) {
@@ -209,7 +209,7 @@ func (d *poolDequeue) popHead() (interface{}, bool) {
 * 需要判断队列是否为空，即 tail 和 head 是否相等；
 * 取出元素后，需要将插槽归零，避免在 pushHead 时发现不为 nil，无法插入；
 * 同一个时刻只会有单个生产者将该插槽归零，不存在竞争，所以无需原子操作；
- ##### (6) poolDequeue.popTail
+ ##### (6) popTail
 ::: details
 ```go
 func (d *poolDequeue) popTail() (interface{}, bool) {
@@ -281,7 +281,7 @@ type poolChain struct {
 * tail 指向的是最早创建的节点，也是最小的队列，从尾部读元素时，即是从 tail 指向的 poolChainElt 节点中的 poolDequeue 队列的进行读，这可以由多个消费者访问，需要进行同步；
 * 当从头部写元素时，当 head 指向的 poolChainElt 节点中的 poolDequeue 环形队列中满了时，会重新创建一个新的节点，该节点中的环形队列的长度是当前 head 中环形队列长度的两倍，并将该节点加入到链表中，更新 head 指向该最新节点，继续往该节点写入；
 * 当从尾部读元素时，当 tail 指向的 poolChainElt 节点中的 poolDequeue 环形队列中空了时，会从该链表中删除该节点，并更新 tail 指向其下一个节点；
-##### (2) poolChain.pushHead
+##### (2) pushHead
 :::details
 ```go
 // 以原子的方式进行存储
@@ -323,7 +323,7 @@ func (c *poolChain) pushHead(val interface{}) {
 :::
 * 从链表的头部写入元素，如果链表头部为空，则说明整个链表为空，则直接创建一个 poolChainElt 节点，其环形队列的长度为 8，即初始环形队列的长度为 8，并将链表的头部和尾部同时指向该节点，可能会有多个消费者同时修改 tail，所以尾部的写入必须是原子的；
 * 如果链表的头部不为空，则直接写入头部节点的环形队列，写入失败则说明该头部的的环形队列已满，需要重新创建环形队列是当前两倍大小的新节点，更新头部节点并写入数据；
-##### (3) poolChain.popHead
+##### (3) popHead
 :::details
 ```go
 func (c *poolChain) popHead() (interface{}, bool) {
@@ -342,7 +342,7 @@ func (c *poolChain) popHead() (interface{}, bool) {
 * 从链表的头部读取元素，尝试从 head 指向的节点的环形队列中开始读取元素，如果没有，则继续从前一个节点读取，即上图中 prev 指向的节点，直到读取到元素立即返回，当达到最后一个节点的 prev 时跳出循环，返回 nil，false；
 * 从 head 往 tail 的过程中加载 poolChainElt 节点，虽然只有一个生产者，但是可能会与其他消费者从 tail 往 head 的过程中加载到同一个节点，所以此处需要原子操作；
 * 在整个读取过程中，即使某个节点的环形队列为空，该节点也不会被删除；
-##### (4) poolChain.popTail
+##### (4) popTail
 :::details
 ```go
 // tail 侧的空队列会被删除
@@ -382,3 +382,42 @@ func (c *poolChain) popTail() (interface{}, bool) {
 * 从 tail 往 head 的过程中加载 poolChainElt 节点，可能会有多个消费者或某个生产者同时加载到同一个节点，所以此处需要原子操作；
 
 ### 2，缓存池
+
+:::details
+```go
+// Pool 是一组可以单独保存和检索的临时对象的集合
+// 存储在池中的任何项目都可能随时自动删除，不另行通知。发生这种情况时如果池保存唯一的引用，则可能会解除分配该项目。
+// 池是多线程安全的，池的目的是缓存已分配但未使用的项目以供以后重用，从而减轻垃圾回收器的压力。
+// 它可以轻松构建高效、线程安全的空闲列表。但是，它并不适合所有免费列表。
+// 池的适当用法是管理一组临时项目，这些项目在包的并发独立客户端之间静默共享并可能由这些临时客户端重用。
+// 池提供了一种在多个客户端之间摊销分配开销的方法。
+// 很好地使用池的一个示例是 fmt 包，它维护一个动态大小的临时输出缓冲区存储，当许多 goroutine 打印时缓冲区变大，静止时变小
+// 另一方面，作为短期对象的一部分维护的空闲列表不适合用于池，因为在这种情况下开销不能很好地摊销，让此类对象实现自己的自由列表会更有效。
+// 首次使用后不得复制池。
+type Pool struct {
+	// 不消耗内存仅用于静态分析的结构，保证一个对象在第一次使用后不会发生复制
+	noCopy noCopy
+
+	// 指向本地 poolLocal 切片的第一个元素，每个 P 对应一个 poolLocal，多个 goroutine 对同一个 Pool 操作时，每个运行在 P 上的 goroutine 优先取该 P 上 poolLocal 中的元素，能够减少不同 goroutine 之间的竞争，提升性能
+	local unsafe.Pointer
+	// 本地切片 poolLocal 的大小，一般是系统核数，除非程序中自定义了运行核数
+	localSize uintptr
+	/*
+		Victim cache（牺牲者缓存）是一种用于提高缓存性能的缓存内存类型，临时存储从主缓存中驱逐出来的数据，它通常位于主缓存和主存储器之间。
+		当主缓存发生缓存未命中时，在访问主存储器之前会检查牺牲者缓存。如果请求的数据在牺牲者缓存中找到，就认为是缓存命中，并将数据返回给处理器，而无需访问主存储器。
+		作为一种优化缓存的技术，助于减少平均内存访问时间，提高整体系统性能。
+		当主缓存需要用新数据替换一个缓存行时，它会将最近最少使用（LRU）的缓存行放入牺牲者缓存中，以防近期再次需要该数据。
+		牺牲者缓存通常比主缓存更小，关联度更低。它的目的是捕获那些可能在不久的将来再次访问的缓存行，但由于主缓存的大小限制而无法容纳。
+		通过将这些被驱逐的缓存行保留在一个单独的缓存中，系统可以减少对主存储器的访问次数，提高整体性能。
+		在一轮 GC 到来时，victim 和 victimSize 会分别接管 local 和 localSize
+		当从 local 中未查询到时，会进一步在 victim 中查询；
+		在 GC 后冷启动时，local 中没有缓存对象，victim 中有，能够避免冷启时大量创建对象导致性能抖动，让分配对象更平滑
+	*/
+	victim     unsafe.Pointer
+	victimSize uintptr
+
+	// 指定一个函数，用于在 Pool 中没有对象时创建新的对象
+	New func() interface{}
+}
+```
+:::
