--- a/docs/01.语言/01.Go/12.sync.Pool.md
+++ b/docs/01.语言/01.Go/12.sync.Pool.md
@@ -24,9 +24,9 @@ author:
 ## 二、基本原理
 * 根据当前 P 的个数，即默认是 CPU 核数或是用户自定义的核数，Pool 为每个 P 分配一个私有对象和共享对象的结构体，下图中 `poolLocalInternal`，多个`poolLocalInternal`结构体组成一个数组；
   * 私有对象可以直接存储该 Pool 需要存储的临时对象，每个 P 都只能对自己的私有对象进行存取，无权访问其他 P 的私有对象；
-  * 共享对象是一个双端队列，队列的元素是一个个长度为 2 的幂的环，且后一个是前一个的两倍长，环中存储的也是 Pool 需要存储的临时对象，如下图中右侧的环；
-  * 对于共享对象的双端队列，生产者可以从头部的环存取临时对象，消费者只能从尾部的环取临时对象，即每个 P 可以对自己的共享对象的双端队列头部进行读取，对其他 P 的共享对象的双端队列的尾部进行取；
-  * 每个 P 都是自己共享对象的生产者，都是其他 P 共享对象的消费者，如下图中 P0 能够从自己的 share 所指向的队列的 head 处进行读写数据，P1、P2、P3 只能从 P0 的 share 所指向的队列的 tail 处读数据；
+  * 共享对象是一个双向链表，链表的节点是一个个长度为 2 的幂的环，且后一个是前一个的两倍长，环中存储的也是 Pool 需要存储的临时对象，如下图中右侧的环；
+  * 对于共享对象的双向链表，生产者可以从头部的环存取临时对象，消费者只能从尾部的环取临时对象，即每个 P 可以对自己的共享对象的双向链表头部进行读取，对其他 P 的共享对象的双向链表的尾部进行取；
+  * 每个 P 都是自己共享对象的生产者，都是其他 P 共享对象的消费者，如下图中 P0 能够从自己的 share 所指向的链表的 head 处进行读写数据，P1、P2、P3 只能从 P0 的 share 所指向的链表的 tail 处读数据；
 * 根据 GMP 模型，每个 P 上可以运行多个 G，在 G 需要去 Pool 中存取临时对象时，会将 G 与 P 绑定，并按照 P 的序号去数组中取其对应的结构体对象，这样避免了多线程之间的竞争；
 
 ![sync-pool](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/sync-pool.53s0d4fij474.png)
@@ -77,7 +77,7 @@ func main() {
 * 从`Pool`中取出临时对象后，使用完毕时，仍然可以放回去，供其他 P 使用；
 
 ## 四、源码解读
-### （一）双端链表
+### （一）双向链表
 #### 1，poolDequeue
 ##### (1) poolDequeue 结构
 ::: details
@@ -381,7 +381,7 @@ func (c *poolChain) popTail() (interface{}, bool) {
 * 提前获取 tail 的下一个节点，从当前节点读取数据，能读到则直接返回，读不到但下一个节点为空则整个链表也读不到直接返回，读不到但下一个节点不为空，则删除当前节点，并从下一个节点继续开始读取数据，直到 head 节点的 next 节点；
 * 从 tail 往 head 的过程中加载 poolChainElt 节点，可能会有多个消费者或某个生产者同时加载到同一个节点，所以此处需要原子操作；
 
-### 2，缓存池
+### （二）缓存池
 
 :::details
 ```go
