--- a/docs/01.语言/01.Go/12.sync.Pool.md
+++ b/docs/01.语言/01.Go/12.sync.Pool.md
@@ -382,42 +382,23 @@ func (c *poolChain) popTail() (interface{}, bool) {
 * 从 tail 往 head 的过程中加载 poolChainElt 节点，可能会有多个消费者或某个生产者同时加载到同一个节点，所以此处需要原子操作；
 
 ### （二）缓存池
-
+#### 1，Pool
 :::details
 ```go
-// Pool 是一组可以单独保存和检索的临时对象的集合
-// 存储在池中的任何项目都可能随时自动删除，不另行通知。发生这种情况时如果池保存唯一的引用，则可能会解除分配该项目。
-// 池是多线程安全的，池的目的是缓存已分配但未使用的项目以供以后重用，从而减轻垃圾回收器的压力。
-// 它可以轻松构建高效、线程安全的空闲列表。但是，它并不适合所有免费列表。
-// 池的适当用法是管理一组临时项目，这些项目在包的并发独立客户端之间静默共享并可能由这些临时客户端重用。
-// 池提供了一种在多个客户端之间摊销分配开销的方法。
-// 很好地使用池的一个示例是 fmt 包，它维护一个动态大小的临时输出缓冲区存储，当许多 goroutine 打印时缓冲区变大，静止时变小
-// 另一方面，作为短期对象的一部分维护的空闲列表不适合用于池，因为在这种情况下开销不能很好地摊销，让此类对象实现自己的自由列表会更有效。
-// 首次使用后不得复制池。
 type Pool struct {
-	// 不消耗内存仅用于静态分析的结构，保证一个对象在第一次使用后不会发生复制
-	noCopy noCopy
-
-	// 指向本地 poolLocal 切片的第一个元素，每个 P 对应一个 poolLocal，多个 goroutine 对同一个 Pool 操作时，每个运行在 P 上的 goroutine 优先取该 P 上 poolLocal 中的元素，能够减少不同 goroutine 之间的竞争，提升性能
-	local unsafe.Pointer
-	// 本地切片 poolLocal 的大小，一般是系统核数，除非程序中自定义了运行核数
-	localSize uintptr
-	/*
-		Victim cache（牺牲者缓存）是一种用于提高缓存性能的缓存内存类型，临时存储从主缓存中驱逐出来的数据，它通常位于主缓存和主存储器之间。
-		当主缓存发生缓存未命中时，在访问主存储器之前会检查牺牲者缓存。如果请求的数据在牺牲者缓存中找到，就认为是缓存命中，并将数据返回给处理器，而无需访问主存储器。
-		作为一种优化缓存的技术，助于减少平均内存访问时间，提高整体系统性能。
-		当主缓存需要用新数据替换一个缓存行时，它会将最近最少使用（LRU）的缓存行放入牺牲者缓存中，以防近期再次需要该数据。
-		牺牲者缓存通常比主缓存更小，关联度更低。它的目的是捕获那些可能在不久的将来再次访问的缓存行，但由于主缓存的大小限制而无法容纳。
-		通过将这些被驱逐的缓存行保留在一个单独的缓存中，系统可以减少对主存储器的访问次数，提高整体性能。
-		在一轮 GC 到来时，victim 和 victimSize 会分别接管 local 和 localSize
-		当从 local 中未查询到时，会进一步在 victim 中查询；
-		在 GC 后冷启动时，local 中没有缓存对象，victim 中有，能够避免冷启时大量创建对象导致性能抖动，让分配对象更平滑
-	*/
-	victim     unsafe.Pointer
-	victimSize uintptr
+	noCopy 		noCopy
+	local 		unsafe.Pointer
+	localSize 	uintptr
+	victim     	unsafe.Pointer
+	victimSize 	uintptr
 
 	// 指定一个函数，用于在 Pool 中没有对象时创建新的对象
 	New func() interface{}
 }
 ```
 :::
+* Pool 是一组可以单独保存和检索的临时对象的集合；
+* noCopy 不消耗内存仅用于静态分析的结构，保证一个对象在第一次使用后不会发生复制；
+* local 指向本地 poolLocalInternal 数组的第一个元素，每个 P 对应一个 poolLocalInternal，多个 goroutine 对同一个 Pool 操作时，每个运行在 P 上的 goroutine 优先取该 P 上 poolLocalInternal 中的元素，能够减少不同 goroutine 之间的竞争，提升性能；
+* localSize 本地 poolLocalInternal 数组的大小，一般是系统核数，除非程序中自定义了运行核数，一般是大于 P 的数量，除非运行中修改了运行核数；
+* victim Victim Cache（牺牲者缓存）是一种用于提高缓存性能的缓存内存类型，临时存储从主缓存中驱逐出来的数据，它通常位于主缓存和主存储器之间；当主缓存发生缓存未命中时，在访问主存储器之前会检查牺牲者缓存。如果请求的数据在牺牲者缓存中找到，就认为是缓存命中，并将数据返回给处理器，而无需访问主存储器。作为一种优化缓存的技术，助于减少平均内存访问时间，提高整体系统性能。当主缓存需要用新数据替换一个缓存行时，它会将最近最少使用（LRU）的缓存行放入牺牲者缓存中，以防近期再次需要该数据。牺牲者缓存通常比主缓存更小，关联度更低。它的目的是捕获那些可能在不久的将来再次访问的缓存行，但由于主缓存的大小限制而无法容纳。通过将这些被驱逐的缓存行保留在一个单独的缓存中，系统可以减少对主存储器的访问次数，提高整体性能。在一轮 GC 到来时，victim 和 victimSize 会分别接管 local 和 localSize当从 local 中未查询到时，会进一步在 victim 中查询；在 GC 后冷启动时，local 中没有缓存对象，victim 中有，能够避免冷启时大量创建对象导致性能抖动，让分配对象更平滑；是一种一空间换时间的做法。
