--- a/docs/01.语言/01.Go/12.sync.Pool.md
+++ b/docs/01.语言/01.Go/12.sync.Pool.md
@@ -401,4 +401,16 @@ type Pool struct {
 * noCopy 不消耗内存仅用于静态分析的结构，保证一个对象在第一次使用后不会发生复制；
 * local 指向本地 poolLocalInternal 数组的第一个元素，每个 P 对应一个 poolLocalInternal，多个 goroutine 对同一个 Pool 操作时，每个运行在 P 上的 goroutine 优先取该 P 上 poolLocalInternal 中的元素，能够减少不同 goroutine 之间的竞争，提升性能；
 * localSize 本地 poolLocalInternal 数组的大小，一般是系统核数，除非程序中自定义了运行核数，一般是大于 P 的数量，除非运行中修改了运行核数；
-* victim Victim Cache（牺牲者缓存）是一种用于提高缓存性能的缓存内存类型，临时存储从主缓存中驱逐出来的数据，它通常位于主缓存和主存储器之间；当主缓存发生缓存未命中时，在访问主存储器之前会检查牺牲者缓存。如果请求的数据在牺牲者缓存中找到，就认为是缓存命中，并将数据返回给处理器，而无需访问主存储器。作为一种优化缓存的技术，助于减少平均内存访问时间，提高整体系统性能。当主缓存需要用新数据替换一个缓存行时，它会将最近最少使用（LRU）的缓存行放入牺牲者缓存中，以防近期再次需要该数据。牺牲者缓存通常比主缓存更小，关联度更低。它的目的是捕获那些可能在不久的将来再次访问的缓存行，但由于主缓存的大小限制而无法容纳。通过将这些被驱逐的缓存行保留在一个单独的缓存中，系统可以减少对主存储器的访问次数，提高整体性能。在一轮 GC 到来时，victim 和 victimSize 会分别接管 local 和 localSize当从 local 中未查询到时，会进一步在 victim 中查询；在 GC 后冷启动时，local 中没有缓存对象，victim 中有，能够避免冷启时大量创建对象导致性能抖动，让分配对象更平滑；是一种一空间换时间的做法。
+* 在一轮 GC 到来时，victim 和 victimSize 会分别接管 local 和 localSize当从 local 中未查询到时，会进一步在 victim 中查询；在 GC 后冷启动时，local 中没有缓存对象，victim 中有，能够避免冷启时大量创建对象导致性能抖动，让分配对象更平滑；是一种一空间换时间的做法；
+
+:::tip
+Victim Cache（牺牲者缓存）是一种用于提高缓存性能的缓存内存类型，临时存储从主缓存中驱逐出来的数据，它通常位于主缓存和主存储器之间；当主缓存发生缓存未命中时，在访问主存储器之前会检查牺牲者缓存。如果请求的数据在牺牲者缓存中找到，就认为是缓存命中，并将数据返回给处理器，而无需访问主存储器。作为一种优化缓存的技术，助于减少平均内存访问时间，提高整体系统性能。当主缓存需要用新数据替换一个缓存行时，它会将最近最少使用（LRU）的缓存行放入牺牲者缓存中，以防近期再次需要该数据。牺牲者缓存通常比主缓存更小，关联度更低。它的目的是捕获那些可能在不久的将来再次访问的缓存行，但由于主缓存的大小限制而无法容纳。通过将这些被驱逐的缓存行保留在一个单独的缓存中，系统可以减少对主存储器的访问次数，提高整体性能。
+:::
+
+
+
+
+
+
+
+* 参考文章
