--- a/docs/01.语言/01.Go/05.Sync.Map.md
+++ b/docs/01.语言/01.Go/05.Sync.Map.md
@@ -13,7 +13,7 @@ author:
   link: https://github.com/erlangtui
 ---
 ::: tip
-本文代码基于 go1.17.13，sync/map.go
+本文代码基于 go1.17.13，src/sync/map.go
 :::
 ## 一、简述
 * Map 类似于 Go `map[interface{}]interface{}` 以哈希表的方式存储键值对，但可以安全地由多个 goroutines 并发使用，无需额外的加锁；
