--- a/docs/01.语言/01.Go/06.Sync.Mutex.md
+++ b/docs/01.语言/01.Go/06.Sync.Mutex.md
@@ -13,7 +13,7 @@ author:
   link: https://github.com/erlangtui
 ---
 ::: tip
-本文代码基于 go1.17.13，sync/mutex.go
+本文代码基于 go1.17.13，src/sync/mutex.go
 :::
 ## 一、简述
 * Mutex 互斥锁，同一时刻只能被一个 goroutine 拥有；
