--- a/docs/01.语言/01.Go/07.Sync.RWMutex.md
+++ b/docs/01.语言/01.Go/07.Sync.RWMutex.md
@@ -13,7 +13,7 @@ author:
   link: https://github.com/erlangtui
 ---
 ::: tip
-本文代码基于 go1.17.13，sync/rwmutex.go
+本文代码基于 go1.17.13，src/sync/rwmutex.go
 :::
 ## 一、简述
 * RWMutex 是一个读写互斥锁，锁可以被多个读 goroutine 同时拥有或被单个写 goroutine 拥有，但不能同时被读写 goroutine 拥有，即：<span style="color: red;">**写写互斥、写读互斥，只有读读是不互斥的**</span>；
