--- a/docs/01.语言/01.Go/08.sync.WaitGroup.md
+++ b/docs/01.语言/01.Go/08.sync.WaitGroup.md
@@ -13,7 +13,7 @@ author:
   link: https://github.com/erlangtui
 ---
 ::: tip
-本文代码基于 go1.17.13，sync/waitgroup.go
+本文代码基于 go1.17.13，src/sync/waitgroup.go
 :::
 ## 一、简述
 * 主 goroutine 阻塞等待一组 goroutine 完成后，再进行后续操作；
