--- a/docs/01.语言/01.Go/10.sync.Cond.md
+++ b/docs/01.语言/01.Go/10.sync.Cond.md
@@ -14,7 +14,7 @@ author:
 ---
 
 ::: tip
-本文代码基于 go1.17.13，sync/cond.go
+本文代码基于 go1.17.13，src/sync/cond.go
 :::
 ## 一、简述
 * Cond 实现了一个条件变量，可以让一组阻塞等待的 goroutine 在满足条件的情况下被唤醒；
