--- a/docs/01.语言/01.Go/11.sync atomic.md
+++ b/docs/01.语言/01.Go/11.sync atomic.md
@@ -13,7 +13,7 @@ author:
   link: https://github.com/erlangtui
 ---
 ::: tip
-本文代码基于 go1.17.13，sync/atomic/目录下的 value.go、doc.go、asm.s
+本文代码基于 go1.17.13，src/sync/atomic/目录下的 value.go、doc.go、asm.s
 :::
 ## 一、简述
 * <span style="color: red;">**atomic 包提供了原子操作，用于在多个 goroutine 之间进行安全的并发访问和修改共享变量,原子操作是一种不可分割的操作，可以保证在并发环境下的数据安全性；**</span>
