--- a/docs/01.语言/01.Go/12.sync.Pool.md
+++ b/docs/01.语言/01.Go/12.sync.Pool.md
@@ -12,7 +12,7 @@ author:
   link: https://github.com/erlangtui
 ---
 ::: tip
-本文代码基于 go1.17.13，sync/pool.go、sync/poolqueue.go
+本文代码基于 go1.17.13，src/sync/pool.go、src/sync/poolqueue.go
 :::
 
 ## 一、简述
