--- a/docs/01.语言/01.Go/00.Go的基本介绍.md
+++ b/docs/01.语言/01.Go/00.Go的基本介绍.md
@@ -46,6 +46,7 @@ author:
 ## 二、数据类型
 * go 是一种强类型语言，数据类型之间有着严格的区分；
 * 常见的数据类型有：
+  :::details
   ```go
   bool // 布尔类型，值为 true or false
 
@@ -77,6 +78,7 @@ author:
 
   nil // 一个预先声明的标识符，表示指针、通道、func、接口、映射或切片类型的零值
   ```
+  :::
 
 ## 三、数据结构
 ### 1，slice
@@ -203,15 +205,15 @@ author:
 * 读写锁，同一时刻只能被一个写 goroutine 拥有，或同时被多个读 goroutine 拥有；
 * 写写、写读互斥，读读不互斥；
 ### 3，WaitGroup
-* 用于等待一组 goroutine 的返回，例如并发请求后等待结果返回再统一处理；
+* 主 goroutine 等待子 goroutine，用于等待一组 goroutine 的返回，例如并发请求后等待结果返回再统一处理；
 ### 4，Once
 * 用于保证运行期间，某段代码只执行一次，例如初始化某个配置；
 ### 5，Cond
-
+* 子 goroutine 等待主 goroutine，实现了一个条件变量，可以让一组阻塞等待的 goroutine 在满足条件的情况下被唤醒；
 ### 6，Pool
-
+* 一组可以单独保存和检索的临时对象的集合，<span style="color: red;">**可以缓存已分配但未使用的对象供以后重用，从而减轻垃圾回收器的压力**</span>；
 ### 7，atomic
-
+* 提供了一系列的函数，用于对基本数据类型（如整数、指针）进行原子操作，包括读取、存储、加法、减法、比较等；
 ## 六、关键字
 ### 1，for
 
