--- a/docs/01.语言/02.C++/01.构造函数.md
+++ b/docs/01.语言/02.C++/01.构造函数.md
@@ -134,7 +134,7 @@ MyClass &operator=(MyClass &&other) noexcept
   * <span style="color: red;">**如果已经存在新的对象，则是拷贝赋值函数**</span>；
 * 执行移动构造函数还是执行移动赋值函数的区别点同上；
 
-## 八、、完整示例
+## 八、完整示例
 
 ```cpp
 #include <iostream>
