--- a/docs/01.语言/01.Go/13.context.md
+++ b/docs/01.语言/01.Go/13.context.md
@@ -541,3 +541,8 @@ func (c *valueCtx) Value(key interface{}) interface{} {
 }
 ```go
 :::
+
+
+>**参考文章**<br>
+> [1] [一文掌握 Go 并发模式 Context 上下文](https://juejin.cn/post/7233981178101186619)
+> [2] [【Go语言】小白也能看懂的context包详解：从入门到精通](https://segmentfault.com/a/1190000040917752)
