--- a/docs/01.语言/01.Go/13.context.md
+++ b/docs/01.语言/01.Go/13.context.md
@@ -72,6 +72,7 @@ Context 在 Go 服务器中，每个传入的请求都在自己的 goroutine 中
 Context 是一个携带了截止时间、取消信息、以及其他值的、跨API界限的、可以被多个线程同时调用的上下文
 
 ## 四、源码解读
+### 1，Context
 :::details
 ```go
 type Context interface {
@@ -139,7 +140,12 @@ type Context interface {
 	// 	}
 	Value(key interface{}) interface{}
 }
+```
+:::
 
+### 2，emptyCtx
+:::details
+```go
 // Canceled 上下文取消的错误，当上下文取消时，在调用Context.Err()函数时返回
 var Canceled = errors.New("context canceled")
 
@@ -195,6 +201,12 @@ func TODO() Context {
 	return todo
 }
 
+```
+:::
+
+### 3，WithCancel
+:::details
+```go
 // CancelFunc 一个函数类型，表示取消函数的具体执行内容
 // 告诉操作者放弃其工作，不会等待工作停止
 // 能够被多个协程同时调用，当第一次被调用后，后续的调用不会做任何事情
